add translation for chat

--- a/app/chat/templates/chat/room.html
+++ b/app/chat/templates/chat/room.html
@@ -19,7 +19,8 @@
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
         var message = data['message'];
-        document.querySelector('#chat-log').value += (message + '\n');
+        var username = data['username'] || 'anonymous';
+        document.querySelector('#chat-log').value += (username + ': ' + message + '\n');
     };
 
     chatSocket.onclose = function(e) {
