--- a/app/chat/templates/chat/index.html
+++ b/app/chat/templates/chat/index.html
@@ -5,22 +5,9 @@
     <title>Chat Rooms</title>
 </head>
 <body>
-    What chat room would you like to enter?<br/>
-    <input id="room-name-input" type="text" size="100"/><br/>
-    <input id="room-name-submit" type="button" value="Enter"/>
-
-    <script>
-        document.querySelector('#room-name-input').focus();
-        document.querySelector('#room-name-input').onkeyup = function(e) {
-            if (e.keyCode === 13) {  // enter, return
-                document.querySelector('#room-name-submit').click();
-            }
-        };
-
-        document.querySelector('#room-name-submit').onclick = function(e) {
-            var roomName = document.querySelector('#room-name-input').value;
-            window.location.pathname = '/chat/' + roomName + '/';
-        };
-    </script>
+    <h3>Choose chat room by your language:</h3>
+    {% for code, language in roomNames %}
+        <a href="/chat/{{code}}">{{ language }}</a><br/>
+    {% endfor %}
 </body>
 </html>
